Fixed a scrollbar issue
Commented out the overflow: hidden; (Not sure why, but that was in the code I copied from the video. Anyway, removing it fixed the issue.)

--- a/Basic_HTML_and_CSS/css/animations.css
+++ b/Basic_HTML_and_CSS/css/animations.css
@@ -43,7 +43,7 @@ gallery section animation
     position: relative;
     line-height: 0;
     margin-bottom: 2em;
-    overflow: hidden;
+    /*overflow: hidden;*/
     border-radius: 8px;
     padding: 1px;
     border: 1px solid #021a40;
