--- a/Basic_HTML_and_CSS/css/shared.css
+++ b/Basic_HTML_and_CSS/css/shared.css
@@ -127,7 +127,7 @@ section {
 
 
 
-    overflow: hidden;
+    /*overflow: hidden;*/
     top: 0;
     left: 0;
     text-align: center;
